--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/material": "^7.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -32,7 +33,7 @@
     "globals": "^16.2.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^6.0.0",
+    "vite": "^7.0.4",
     "vite-plugin-pwa": "^1.0.0"
   }
 }
